# devo

./: README.md  pyproject.toml
docs/: conf.py  index.rst  src.helpers.rst  src.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  src.doctree  src.helpers.directory.doctree  src.helpers.doctree  src.main.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js  src.helpers.directory.html  src.helpers.html  src.html  src.main.html
docs/_build/html/_sources/: src.helpers.directory.rst.txt
src/: devo.py
src/helpers/: directory.py
src/projects/: cpp_sw.py  python.py
src/templates/: .gitignore  CMakeLists.txt  pyproject.toml
